<resources>
    <string name="app_name">Smart Recipe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Recipe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_memberships">Memberships</string>
    <string name="menu_recipe">Recipe</string>
    <string name="menu_how_it_works">How it Works</string>
    <string name="menu_about">About</string>
    <string name="menu_text">Find the perfect food recipes category that you want.</string>
    <string name="menu_subtext">Discover 200+ recipes and seasonal collections.</string>
    <string name="search_text">Find the specific recipe you\'re looking for with search.</string>
    <string name="search_subtext">Quickly find your recipe by tags or keywords.</string>
    <string name="pick_text">Pick out a recipe of your choice, click and get the exact details.</string>
    <string name="pick_subtext">Visualize a beautiful way to prepare your food.</string>
    <string name="learn_text">Learn.</string>
    <string name="share_text">Share.</string>
    <string name="share_subtext">Share the recipe with your friends and family.</string>
    <string name="learn_subtext">Each recipe includes nutritional information so you can always make healthy choice .</string>
    <string name="about_text">Smart Recipe is a food-focused mobile application with hundreds of easy and tasty recipes.\nAll recipes use simple ingredients that are easily available and inexpensive.\nIf you are interested in learning how to cook healthy and yet simple recipes you\'re in the right place.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="text_home">Welcome to smart recipes where cooking is made simple.</string>
    <string name="sub_text_home">Find  2000+ healthy recipes  in the categories section after you subscribe .\nEnjoy!!</string>
    <string name="show_breakfast">Breakfast</string>
    <string name="show_lunch">Lunch</string>
    <string name="show_dinner">Dinner</string>
    <string name="show_snack">Snack</string>
    <string name="show_tea_time">Tea Time</string>
    <string name="floatImageBtn">Navigate to Categories section</string>
    <string name="food_image">Food Image</string>
    <string name="network_status">Showing network status</string>
    <string name="label">%s</string>
    <string name="ingredient_lines">%s</string>
    <string name="health_labels">%s</string>
    <string name="directions">%s</string>
    <string name="menu_categories_label">Categories</string>
    <string name="layout_search_exhausted_no_more_results">No more results…</string>
    <string name="layout_recipe_calories_label">Calories</string>
    <string name="recipe_activity_calories_serving_label">Calories/Serving</string>
    <string name="recipe_activity_servings_label">Servings</string>
    <string name="recipe_activity_diet_labels">Diet Labels</string>
    <string name="recipe_activity_health_labels">Health Labels</string>
    <string name="recipe_activity_cautions">Cautions</string>
    <string name="subscription">Subscription</string>
</resources>