<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smartrecipe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_nav_home_to_subscriptionActivity"
            app:destination="@id/nav_subscription" />
        <action
            android:id="@+id/action_nav_home_to_nav_categories"
            app:destination="@id/nav_categories" />
    </fragment>

        <fragment
        android:id="@+id/nav_how_it_works"
        android:name="com.example.smartrecipe.ui.howItWorks.HowItWorks"
        android:label="@string/menu_how_it_works"
        tools:layout="@layout/how_it_works_fragment" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.smartrecipe.ui.about.About"
        android:label="@string/menu_about"
        tools:layout="@layout/about_fragment" />
    <activity
        android:id="@+id/nav_categories"
        android:name="com.example.smartrecipe.RecipeListActivity"
        android:label="activity_recipe_list"
        tools:layout="@layout/activity_recipe_list" />
    <activity
        android:id="@+id/nav_subscription"
        android:name="com.example.smartrecipe.ui.subscription.SubscriptionActivity"
        android:label="subscription_activity"
        tools:layout="@layout/subscription_activity" >
    </activity>

</navigation>