<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:id="@+id/back_arrow"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:id="@+id/parent"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/recipe_image_height"
                android:scaleType="centerCrop"
                android:id="@+id/recipe_image"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:layout_below="@id/recipe_image"
                android:id="@+id/title_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/recipe_20sp_text_size"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textColor="#000"
                    android:id="@+id/recipe_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/recipe_16sp_text_size"
                    android:fontFamily="sans-serif-condensed-light"
                    android:layout_below="@id/recipe_label"
                    android:id="@+id/recipe_source"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_below="@id/title_container"
                android:id="@+id/container"
                android:weightSum="100">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:textSize="@dimen/recipe_15sp_text_size"
                        android:fontFamily="sans-serif-condensed-light"
                        android:id="@id/recipe_calories"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_activity_calories_serving_label"
                        android:fontFamily="sans-serif-condensed-light"
                        android:textSize="@dimen/recipe_15sp_text_size"
                        android:layout_below="@id/recipe_calories"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/recipe_15sp_text_size"
                        android:fontFamily="sans-serif-condensed-light"
                        android:textColor="@color/red"
                        android:id="@+id/recipe_servings"
                        android:layout_centerHorizontal="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_activity_servings_label"
                        android:fontFamily="sans-serif-condensed-light"
                        android:textSize="@dimen/recipe_15sp_text_size"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/recipe_servings"/>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/diet_container"
                android:layout_below="@id/container"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_activity_diet_labels"
                    android:textSize="@dimen/recipe_16sp_text_size"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textStyle="bold"
                    android:id="@+id/diet_title"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_below="@id/diet_title"
                    android:orientation="vertical"
                    android:id="@+id/diet_list">
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/health_container"
                android:layout_below="@id/diet_container"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_activity_health_labels"
                    android:textSize="@dimen/recipe_16sp_text_size"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textStyle="bold"
                    android:id="@+id/health_title"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_below="@id/health_title"
                    android:orientation="vertical"
                    android:id="@+id/health_list">
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/cautions_container"
                android:layout_below="@id/health_container"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_activity_cautions"
                    android:textSize="@dimen/recipe_16sp_text_size"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textStyle="bold"
                    android:id="@+id/cautions_title"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_below="@id/cautions_title"
                    android:orientation="vertical"
                    android:id="@+id/cautions_list">
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_below="@id/cautions_container"
                android:id="@+id/ingredients_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/recipe_16sp_text_size"
                    android:fontFamily="sans-serif-condensed-light"
                    android:textStyle="bold"
                    android:id="@+id/ingredients_title"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:layout_below="@id/ingredients_title"
                    android:orientation="vertical"
                    android:id="@+id/ingredients_list">
                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>